Start packaging
Update to java 16 so we can use jpackage. Change svgs to pngs. Javafx webview doesn't seem capable of loading svg files from inside a jar. Modify text to speech to use maven dependencies. Start on an msi packaging script.